# zinc

./: .gitignore  .project  AllTests.py  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  COPYRIGHT.txt  FindOpenCASCADE.cmake  FindPCRE.cmake  FunctionDefinitions.cmake  GTestChecks.cmake  INSTALL  LICENSE  MacroDefinitions.cmake  Makefile  NOTICE.txt  README  README.txt  RELEASE_NOTES  api.doxyfile  cell.make  cmgui.doxyfile  cmgui.make  cmguiMakefile  cmgui_imake.make  groups  project.config  test_resources.h.cmake  unemap.make  unemap_imake.make
application/: CMakeLists.txt
application/source/: cmgui.cpp
bindings/: CMakeLists.txt
bindings/interface/: context.i  differentialoperator.i  doublevaluesarraytypemap.i  element.i  field.i  fieldarraytypemap.i  fieldassignment.i  fieldcache.i  fieldmodule.i  fieldparameters.i  fieldsmoothing.i  font.i  glyph.i  graphics.i  integervaluesarraytypemap.i  light.i  logger.i  material.i  node.i  optimisation.i  pyzincstringhandling.i  region.i  result.i  scene.i  scenecoordinatesystem.i  scenefilter.i  scenepicker.i  sceneviewer.i  sceneviewerinput.i  selection.i  shader.i  spectrum.i  status.i  stream.i  streamimage.i  streamregion.i  streamscene.i  tessellation.i  timekeeper.i  timenotifier.i  (+1 more)
bindings/python/: CHANGES.txt  CMakeLists.txt  CMakeLists.txt.orig  Functions.cmake  InstallConfig.cmake  PKG-INFO  README.rst  README.txt  install_virtualenv.in.cmake  opencmiss__init__.py  setup.in.py  zinc__init__.in.py
core/: CMakeLists.txt  win.in.rc
core/source/: cmgui.exports  license.h
python/: CMakeLists.txt  Functions.cmake  LICENSE.txt  MANIFEST.in  createpackagefiles.in.cmake  runalltests.py  setup.in.py  setup.py
python/field_tests/: compositetests.py  fieldmodulenotifiertests.py  fieldtests.py  sceneviewerprojectionfieldtests.py  vectoroperatortests.py
python/graphic_tests/: graphictests.py
python/graphics_tests/: graphicstests.py
python/imageprocessing_tests/: imagefilterbinarythresholdtests.py  imagefilterconnectedthresholdtests.py  imagefilterdiscretegaussiantests.py  imagefilterhistogramtests.py  imagefiltermeantests.py  imagefilterthresholdtests.py  imageprocessingtests.py
python/import_tests/: importtests.py
python/region_tests/: regiontests.py
python/sceneviewer_tests/: sceneviewertests.py
src/: CMakeLists.txt  license.h  win.in.rc
src/cad/: cad_element.cpp  cad_element.h  cad_geometry_to_graphics_object.cpp  cad_geometry_to_graphics_object.h  cad_importer.cpp  cad_importer.h  computed_field_cad_colour.cpp  computed_field_cad_colour.h  computed_field_cad_geometry.cpp  computed_field_cad_geometry.h  computed_field_cad_topology.cpp  computed_field_cad_topology.h  computed_field_cad_topology_private.h  curve.cpp  curve.h  element_identifier.cpp  element_identifier.h  entity.cpp  entity.h  field_location.cpp  field_location.hpp  file_import_export.cpp  file_import_export.h  geometric_shape.cpp  geometric_shape.h  graphic_importer.cpp  graphic_importer.h  occ_part_factory.cpp  occ_part_factory.h  opencascade_format_reader.cpp  opencascade_format_reader.h  opencascade_importer.cpp  opencascade_importer.h  point.cpp  point.h  surface.cpp  surface.h  topological_shape.cpp  topological_shape.h  topological_shape_root.cpp  (+3 more)
src/cmake/: api_source_files.cmake  apipp_source_files.cmake  command_source_files.cmake  computed_field_source_files.cmake  finite_element_source_files.cmake  general_source_files.cmake  graphics_source_files.cmake  image_processing_source_files.cmake  misc_source_files.cmake  opencascade_source_files.cmake  zinc_lib_source_files.cmake
src/colour/: colour_editor_wx.cpp  colour_editor_wx.hpp
src/command/: pass_through_interpreter.c  pass_through_interpreter.h
src/computed_field/: computed_field.cpp  computed_field.h  computed_field_alias.cpp  computed_field_alias.h  computed_field_apply.cpp  computed_field_apply.hpp  computed_field_arithmetic_operators.cpp  computed_field_arithmetic_operators.h  computed_field_compose.cpp  computed_field_compose.h  computed_field_composite.cpp  computed_field_composite.h  computed_field_conditional.cpp  computed_field_conditional.h  computed_field_coordinate.cpp  computed_field_coordinate.h  computed_field_deformation.cpp  computed_field_deformation.h  computed_field_derivatives.cpp  computed_field_derivatives.h  computed_field_external.h  computed_field_fibres.cpp  computed_field_find_xi.cpp  computed_field_find_xi.h  computed_field_find_xi_graphics.cpp  computed_field_find_xi_graphics.h  computed_field_find_xi_private.hpp  computed_field_finite_element.cpp  computed_field_finite_element.h  computed_field_format_output.cpp  computed_field_format_output.h  computed_field_function.cpp  computed_field_function.h  computed_field_group.cpp  computed_field_group.hpp  computed_field_group_base.hpp  computed_field_image.cpp  computed_field_image.h  computed_field_image_processing.h  computed_field_integration.cpp  (+50 more)
src/configure/: generate_version_header.cmake  version.cpp.cmake  version.h  version.h.cmake  zincconfigure.h.cmake  zincsharedobject.h.cmake
src/context/: context.cpp  context.hpp
src/datastore/: labels.cpp  labels.hpp  labelschangelog.cpp  labelschangelog.hpp  labelsgroup.cpp  labelsgroup.hpp  map.cpp  map.hpp  maparray.hpp  mapindexing.cpp  mapindexing.hpp
src/description_io/: field_json_io.cpp  field_json_io.hpp  fieldmodule_json_io.cpp  fieldmodule_json_io.hpp  graphics_json_export.cpp  graphics_json_export.hpp  graphics_json_import.cpp  graphics_json_import.hpp  graphics_json_io.cpp  graphics_json_io.hpp  material_json_io.cpp  material_json_io.hpp  scene_json_export.cpp  scene_json_export.hpp  scene_json_import.cpp  scene_json_import.hpp  sceneviewer_json_io.cpp  sceneviewer_json_io.hpp  spectrum_json_io.cpp  spectrum_json_io.hpp  tessellation_json_io.cpp  tessellation_json_io.hpp  timekeeper_json_io.cpp  timekeeper_json_io.hpp
tests/: CMakeLists.txt  COPYRIGHT.txt  GTestChecks.cmake  test_resources.cmake  test_resources.cpp  test_resources.h.cmake  test_resources.in.h  zinctestsetup.hpp  zinctestsetupcpp.hpp
ui/: CMakeLists.txt
(+5641 files in other folders)
